--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ body {
     margin-left: 62px;
 }
 
-.col-md-4 h2 {
+.col-md-3 h2 {
     text-align: center;
 }
 
